apps/curatool/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curatool
  namespace: curatool
spec:
  type: ClusterIP
  selector:
    app: curatool
  ports:
    - port: 80
      targetPort: 8080
