apps/curatool/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curatool-ingress
  namespace: curatool
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: curatool.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curatool
                port:
                  number: 80
